ecmascript/parser/tests/test262-error-references/fail/cee6d8878d1e6589.js.stderr
error: Expected (, got :
 --> $DIR/tests/test262-parser/fail/cee6d8878d1e6589.js:1:6
  |
1 | ({ *a: 0 })
  |      ^

